--- a/helm/linkerd2-app/Chart.yaml
+++ b/helm/linkerd2-app/Chart.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
-appVersion: edge-19.11.2
+appVersion: stable-2.7.1
 description: Linkerd gives you observability, reliability, and security for your microservices
   — with no code change required.
 home: https://linkerd.io
 icon: https://linkerd.io/images/logo-only-200h.png
 keywords:
 - service-mesh
-kubeVersion: '>=1.12.0-0'
+kubeVersion: '>=1.13.0-0'
 maintainers:
 - email: cncf-linkerd-dev@lists.cncf.io
   name: Linkerd authors
@@ -18,3 +18,4 @@ sources:
 - https://github.com/linkerd/linkerd2/
 - https://github.com/giantswarm/linkerd2-app
 version: [[ .Version ]]
+  #version: 2.7.1
