--- a/helm/linkerd2-app/templates/hook-pre-install-annotate-namespace.yaml
+++ b/helm/linkerd2-app/templates/hook-pre-install-annotate-namespace.yaml
@@ -5,8 +5,8 @@ metadata:
   name: namespace-tagger
   namespace: {{ .Release.Namespace }}
   annotations:
-    "helm.sh/hook": "pre-install"
-    "helm.sh/hook-weight": "-10"
+    "helm.sh/hook": "pre-install,pre-upgrade"
+    "helm.sh/hook-weight": "-20"
     "helm.sh/hook-delete-policy": "hook-succeeded,hook-failed"
   labels:
     app: namespace-tagger
@@ -19,6 +19,14 @@ rules:
   - {{ .Release.Namespace }}
   verbs:
   - "*"
+- apiGroups:
+  - ""
+  resources:
+  - configmaps
+  resourceNames:
+  - linkerd-config
+  verbs:
+  - "*"
 ---
 apiVersion: v1
 kind: ServiceAccount
@@ -26,8 +34,8 @@ metadata:
   name: namespace-tagger
   namespace: {{ .Release.Namespace }}
   annotations:
-    "helm.sh/hook": "pre-install"
-    "helm.sh/hook-weight": "-5"
+    "helm.sh/hook": "pre-install,pre-upgrade"
+    "helm.sh/hook-weight": "-15"
     "helm.sh/hook-delete-policy": "hook-succeeded,hook-failed"
   labels:
     app: namespace-tagger
@@ -38,8 +46,8 @@ metadata:
   name: namespace-tagger
   namespace: {{ .Release.Namespace }}
   annotations:
-    "helm.sh/hook": "pre-install"
-    "helm.sh/hook-weight": "-4"
+    "helm.sh/hook": "pre-install,pre-upgrade"
+    "helm.sh/hook-weight": "-14"
     "helm.sh/hook-delete-policy": "hook-succeeded,hook-failed"
   labels:
     app: namespace-tagger
@@ -59,7 +67,8 @@ metadata:
   name: namespace-tagger
   namespace: {{ .Release.Namespace }}
   annotations:
-    "helm.sh/hook": "pre-install"
+    "helm.sh/hook": "pre-install,pre-upgrade"
+    "helm.sh/hook-weight": "-10"
     "helm.sh/hook-delete-policy": "hook-succeeded,hook-failed"
   labels:
     app: namespace-tagger
@@ -80,5 +89,6 @@ spec:
           kubectl annotate --overwrite ns {{ .Release.Namespace }} {{.Values.global.proxyInjectAnnotation}}={{.Values.global.proxyInjectDisabled}};
           kubectl label --overwrite ns {{ .Release.Namespace }} {{.Values.global.linkerdNamespaceLabel}}="true";
           kubectl label --overwrite ns {{ .Release.Namespace }} config.linkerd.io/admission-webhooks=disabled;
+          kubectl -n {{ .Release.Namespace }} delete configmap linkerd-config || true;
       restartPolicy: Never
   backoffLimit: 6
