--- a/helm/linkerd2-app/templates/hook-pre-install-linkerd-config.yaml
+++ b/helm/linkerd2-app/templates/hook-pre-install-linkerd-config.yaml
@@ -9,7 +9,7 @@ metadata:
     {{.Values.global.controllerNamespaceLabel}}: {{.Release.Namespace}}
   annotations:
     {{.Values.global.createdByAnnotation}}: {{printf "linkerd/helm %s" .Values.global.linkerdVersion}}
-    "helm.sh/hook": pre-install
+    "helm.sh/hook": "pre-install,pre-upgrade"
     "helm.sh/hook-weight": "-4"
 data:
   global: |
