--- a/helm/linkerd2-app/templates/hook-pre-install-update-config-with-cert-job.yaml
+++ b/helm/linkerd2-app/templates/hook-pre-install-update-config-with-cert-job.yaml
@@ -7,7 +7,7 @@ metadata:
   name: global-config-creator
   namespace: {{ .Release.Namespace }}
   annotations:
-    "helm.sh/hook": "pre-install"
+    "helm.sh/hook": "pre-install,pre-upgrade"
     "helm.sh/hook-weight": "-5"
     "helm.sh/hook-delete-policy": "hook-succeeded,hook-failed"
   labels:
@@ -46,7 +46,7 @@ metadata:
   name: global-config-creator
   namespace: {{ .Release.Namespace }}
   annotations:
-    "helm.sh/hook": "pre-install"
+    "helm.sh/hook": "pre-install,pre-upgrade"
     "helm.sh/hook-weight": "-5"
     "helm.sh/hook-delete-policy": "hook-succeeded,hook-failed"
   labels:
@@ -58,7 +58,7 @@ metadata:
   name: global-config-creator
   namespace: {{ .Release.Namespace }}
   annotations:
-    "helm.sh/hook": "pre-install"
+    "helm.sh/hook": "pre-install,pre-upgrade"
     "helm.sh/hook-weight": "-4"
     "helm.sh/hook-delete-policy": "hook-succeeded,hook-failed"
   labels:
@@ -79,7 +79,7 @@ metadata:
   name: global-config-creator
   namespace: {{ .Release.Namespace }}
   annotations:
-    "helm.sh/hook": "pre-install"
+    "helm.sh/hook": "pre-install,pre-upgrade"
     "helm.sh/hook-delete-policy": "hook-succeeded,hook-failed"
   labels:
     app: global-config-creator
@@ -107,11 +107,18 @@ spec:
           done; 
           while true; do 
               kubectl -n {{ .Release.Namespace }} get cm linkerd-config -o yaml --export > /tmp/config.yaml; 
-              if [ $? -eq 0 ]; then 
-                  break; 
+              if [ $? -neq 0 ]; then 
+                  echo "waiting for config"; 
+                  sleep 1;
+                  continue; 
               fi; 
-              echo "waiting for config"; 
-              sleep 1; 
+              grep "\"proxyVersion\": \"{{ splitList "." .Values.global.proxy.image.version | join "\\." }}\",$" /tmp/config.yaml >/dev/null
+              if [ $? -neq 0 ]; then 
+                  echo "waiting for updated config"; 
+                  sleep 1;
+                  continue; 
+              fi; 
+              break;
           done; 
           awk -v CERT="$CERT" 'BEGIN{gsub("\n", "\\n", CERT)}; {gsub("REPLACE_ME", CERT);print $0}' /tmp/config.yaml > /tmp/config-out.yaml;
           kubectl -n {{ .Release.Namespace }} replace configmap linkerd-config -f /tmp/config-out.yaml;
