--- a/helm/linkerd2-app/charts/tracing/templates/tracing-rbac.yaml
+++ b/helm/linkerd2-app/charts/tracing/templates/tracing-rbac.yaml
@@ -7,10 +7,10 @@ kind: ServiceAccount
 apiVersion: v1
 metadata:
   name: {{.Values.collector.name}}
-  namespace: {{.Values.global.namespace}}
+  namespace: {{.Release.namespace}}
   labels:
     {{.Values.global.controllerComponentLabel}}: {{.Values.collector.name}}
-    {{.Values.global.controllerNamespaceLabel}}: {{.Values.global.namespace}}
+    {{.Values.global.controllerNamespaceLabel}}: {{.Release.namespace}}
 ---
 ###
 ### linkerd-jaeger RBAC
@@ -20,7 +20,7 @@ kind: ServiceAccount
 apiVersion: v1
 metadata:
   name: {{.Values.jaeger.name}}
-  namespace: {{.Values.global.namespace}}
+  namespace: {{.Release.namespace}}
   labels:
     {{.Values.global.controllerComponentLabel}}: {{.Values.jaeger.name}}
-    {{.Values.global.controllerNamespaceLabel}}: {{.Values.global.namespace}}
+    {{.Values.global.controllerNamespaceLabel}}: {{.Release.namespace}}
