--- a/helm/linkerd2-app/charts/grafana/templates/grafana-rbac.yaml
+++ b/helm/linkerd2-app/charts/grafana/templates/grafana-rbac.yaml
@@ -12,4 +12,5 @@ metadata:
   labels:
     {{.Values.global.controllerComponentLabel}}: grafana
     {{.Values.global.controllerNamespaceLabel}}: {{.Release.Namespace}}
+{{- include "partials.image-pull-secrets" . }}
 {{- end }}
