--- a/tests/ats/Pipfile
+++ b/tests/ats/Pipfile
@@ -4,7 +4,7 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [packages]
-pytest-helm-charts = ">=0.7.0-beta.2"
+pytest-helm-charts = ">=0.7.0"
 pytest = ">=6.2.5"
 pykube-ng = ">=21.10.0"
 pyyaml = "~=6.0"
