--- a/helm/linkerd2-app/templates/destination.yaml
+++ b/helm/linkerd2-app/templates/destination.yaml
@@ -310,6 +310,9 @@ spec:
       {{- $_ := set $tree.Values.proxyInit "ignoreOutboundPorts" "443" }}
       - {{- include "partials.proxy-init" $tree | indent 8 | trimPrefix (repeat 7 " ") }}
       {{ end -}}
+      {{- if .Values.postHookInitHack -}}
+      - {{- include "post-hook-init-hack" $ }}
+      {{-- end }}
       serviceAccountName: linkerd-destination
       volumes:
       - name: sp-tls
