--- a/helm/linkerd2-app/values.yaml
+++ b/helm/linkerd2-app/values.yaml
@@ -394,3 +394,9 @@ nodeSelector:
 # tolerations:
 
 enablePodAntiAffinity: true
+
+# -- postHookInitHack
+# There is a race condition in Kubernetes for cluster running a CNI different than calico as 
+# primary together with Calico as a policy engine (network policies). This is a workaround 
+# to make it work it. More info in https://github.com/giantswarm/roadmap/issues/1174
+postHookInitHack: true
