--- a/helm/linkerd2-app/templates/trafficsplit-crd.yaml
+++ b/helm/linkerd2-app/templates/trafficsplit-crd.yaml
@@ -11,6 +11,7 @@ metadata:
     {{ include "partials.annotations.created-by" . }}
   labels:
     linkerd.io/control-plane-ns: {{.Values.namespace}}
+    {{- include "linkerd.giantswarm-labels" . | nindent 4 }}
 spec:
   group: split.smi-spec.io
   scope: Namespaced
